src/main.css
/* ... */
/* fix bgs */
[class^=userPanelOuter_] /* profile panel */ {
	--background-secondary-alt: var(--bg-0) !important;
}
[class^=childWrapper_] /* no color servers */ {
	background-color: var(--bg-1);
}
[class*=embedFull_] /* embed default color */ {
	border-color: var(--bg-2);
}
/* fix text */
[class^='newChannel_'],
[class^='newBadge_'] {
	color: var(--bg-0);
}
/* fix white-500 */
[class*=buttonColor_] /* play on spotify button */, 
[class*=lookFilled_][class*=colorPrimary_] /* neutral buttons (like in account settings) */,
#app-mount [class*=lookLink_][class*=colorPrimary_] /* link buttons (like in account settings) */,
[class^=friendRequestsButton_] [class^=numberBadge_] /* inbox friend requests number */,
[class^=searchFilter_], [class^=searchAnswer_], 
#app-mount [class^=partyStatus_] [class^=anchor_] /* spotify listen along link */,
#app-mount [class^=partyStatus_] /* spotify listen along text */,
[class^=iconBadge_]:not([class*=isCurrentUserConnected_]) /* vc icon */,
[class^=videoControls_] /* video controls */,
#app-mount [class*=controlIcon_] /* stop streaming icon in preview */,
[class^=navButton_][class*=navButtonActive_] /* gif picker header selected */,
[class^=button_][class*=bannerColor_] /* user profile buttons */,
[class*=backgroundAccent_] /* server insights warning */ {
	color: var(--txt-1);
}
[class*=bannerVisible_] [class^=headerContent_] /* server name (when banner) */,
[class^=jumpToPresentBar_] > button,
[class^=gifFavoriteButton_],
[class^=iconWrapper_] /* video play button */,
[class^=overlayBottom_] > [class^=text-] /* vc names */,
[class^=categoryText_] /* gif category labels */ {
	color: var(--txt-0);
}
[class^=embedVideoActions_] > [class^=centerContent_] > [class^=wrapper_] /* youtube embed play button */,
[class^=centerContent_] > [class^=wrapper_] > [class^=anchor_] /* youtube embed play button */ {
	color: var(--txt-0) !important;
}
[role='button'] path[fill='var(--white-500)'],
#app-mount button path[fill='var(--white-500)'] {
	fill: var(--txt-0);
}

/* accents */
svg[style='color: rgb(88, 101, 242);'] /* folder icons */ {
	color: var(--acc-0) !important;
}
[class^='folderIconWrapper_'][style='background-color: rgba(88, 101, 242, 0.4);'] {
	background: var(--bg-1) !important;
}
[style='opacity: 1; background-color: rgb(35, 165, 90);'] /* settings checkbuttons */ {
	background-color: var(--green) !important;
}
svg[class^=slider_] > rect[fill='white'] /* settings checkbuttons slider */ {
	fill: var(--txt-dark);
}
[class^=message_][class*=replying_]::before /* reply message left bar */ {
	background: var(--txt-1);
}
[class^=message_][class*=mentioned_]::before /* mention message left bar */ {
	background: var(--acc-0);
}

/* add spacing */
[class^=container_] > [class^=base_] /* outside edges */ {
	margin: var(--pad) var(--pad) var(--pad) 0;
}
.guilds_a4d4d9 /* outside edges */ {
	margin: var(--pad) 0 var(--pad) var(--pad);
}
.container_a4d4d9 /* server list and everything else */,
[class^=sidebar_] /* channel list and user panel */,
.content_a7d72e /* between chat and member list */,
.container_c2739c /* friend page */,
[class^=tabBody_] /* friends page inner */,
.container_d1c246 /* forum post header and chat */,
[class^=chat_] /* header bar and chat */,
.container_fb4810 /* new thread header and chat */,
[class^=container_] > [class^=base_] /* banner and main stuff */ {
	gap: var(--pad);
}
[class^=sidebar_] /* channel list and chat */ {
	margin-right: var(--pad);
}
[class^=content_] > [class^=resizeHandle_] /* pretend to be a margin */ {
	width: var(--pad);
}

/* fix inbox overflow and hiding window controls */
[class^='notAppAsidePanel_'] > [class^='layerContainer_'] {
	overflow: hidden;
}

/* platform spacing */
.platform-osx .guilds_a4d4d9 {
	margin-top: calc(32px + var(--pad));
}

/* borders */
[class^=panels_] /* user panel */,
[class^=sidebar_] > [class^=container_] /* channel list */,
[class^=chatContent_] > [class^=messagesWrapper_] /* chat */,
[class^=membersWrap_] /* member list */,
.guilds_a4d4d9 /* server list */,
[class^=privateChannels_] /* dm list */,
.container_fc4f04 /* header bar */,
[class^=peopleColumn_] /* friends page list */,
[class^=nowPlayingColumn_] /* friends page active now */,
[class^=channelBottomBarArea_] /* chat bar */,
.container_a6d69a /* forum */,
[class^=userPanelOuter_] /* dm profile panel */,
[class^=searchResultsWrap_] /* search results */,
.scroller_fb4810 /* new thread */,
[class^=chat_] > [class*=container_] /* header bar */,
[class^='form_'] > [class^='wrapper_'] /* no access chat bar */ {
	border-radius: var(--panel-roundness);
	border: var(--border-width) solid var(--border-color);
	transition: border-color var(--border-transition);
	&:hover {
		border-color: var(--border-hover-color);
		&::after {
			color: var(--border-hover-color);
		}
	}
}
/* adjust border thickness */
#vc-spotify-player,
[class^=panels_] > [class^=wrapper_] > [class^=container] /* vc panel */,
[class^=panels_] > [class^=panel_] /* streaming panel */ {
	border-width: var(--border-width);
}
/* remove borders */
[class^='dot_'][class*='maskSecondary_'] {
	border: none;
}

/* fix border hover effect */
[class^='chatContent_']:has([class^='messagesWrapper_']:hover),
[class^='chatContent_']:has([class^='typing_']:hover) {
	[class^='typing_'] {
		border-color: var(--border-hover-color);
	}
	& > [class^='messagesWrapper_'] {
		border-color: var(--border-hover-color);
	}
}

/* move chat bar out */
:root {
	--custom-channel-textarea-text-area-height: 56px;
}
.form_a7d72e {
	padding: 0;
	width: 100%;
	display: flex;
	flex-direction: column;
	margin-top: 0;
}
.form_a7d72e::after,
.form_a7d72e::before {
	display: none !important;
}
[class^='form_'] [class^='channelTextArea_'] {
	margin: 0;
	border-radius: var(--panel-roundness);
	box-sizing: border-box;
}
[class^='channelBottomBarArea_'] {
	margin-top: var(--pad);
}
/* ... */

